# crochet

./: .gitignore  .pre-commit-config.yaml  package.json  pyproject.toml  tsconfig.json
src/: models.ts
src/crochet/application/: services.py
src/crochet/domain/: commands.py  events.py  model.py
src/crochet/infrastructure/: event_store.py
src/crochet/infrastructure/projections/: __init__.py  project.py
src/crochet/interface/: api.py
tests/application/: test_services.py
tests/domain/: test_events.py  test_model.py
tests/infrastructure/: test_event_store.py
tests/interface/: test_api.py
