[tool.poetry]
name = "crochet"
version = "0.1.0"
description = "Backend for crochet app"
authors = ["Philipp Albrecht <palbrecht@mailbox.org>"]
readme = "README.md"
packages = [{include = "crochet", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
